--- a/projetTest.ipynb
+++ b/projetTest.ipynb
@@ -91,13 +91,13 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def plot_decision_regions(X, y, classifier, test_idx=None, resolution=0.02):\n",
-    "\n",
-    "    # setup marker generator and color map\n",
+    "    \n",
+    "    # setup marker et color map\n",
     "    markers = ('s', 'x', 'o', '^', 'v')\n",
     "    colors = ('red', 'blue', 'lightgreen', 'gray', 'cyan')\n",
     "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
     "\n",
-    "    # plot the decision surface\n",
+    "    # plot de la surface de decision\n",
     "    x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
     "    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution),\n",
@@ -119,7 +119,7 @@
     "\n",
     "    # highlight test examples\n",
     "    if test_idx:\n",
-    "        # plot all examples\n",
+    "        # plot tout les exemples\n",
     "        X_test, y_test = X[test_idx, :], y[test_idx]\n",
     "\n",
     "        plt.scatter(X_test[:, 0],\n",
