--- a/projetTest.ipynb
+++ b/projetTest.ipynb
@@ -174,8 +174,8 @@
     "lr.fit(X_train_std, y_train)\n",
     "\n",
     "plot_decision_regions(X_combined_std, y_combined,classifier=lr, test_idx=range(105, 150))\n",
-    "plt.xlabel('petal length [standardized]')\n",
-    "plt.ylabel('petal width [standardized]')\n",
+    "plt.xlabel('petal length [centré et réduit]')\n",
+    "plt.ylabel('petal width [centré et réduit]')\n",
     "plt.legend(loc='upper left')\n",
     "plt.tight_layout()\n",
     "plt.show()"
