--- a/FloTestNoteBook.ipynb
+++ b/FloTestNoteBook.ipynb
@@ -688,26 +688,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'value'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-73-d503f72ba05c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf7\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'value'"
+     ]
+    }
+   ],
+   "source": [
+    "np.arange(0, len(df7.index),1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[array([[-0.46439307, -0.1113297 , -0.07458967, -0.05852078, -0.04913633]]),\n",
-       " array([[-0.14285101, -0.09080658, -0.04879248, -0.02541397, -0.0103471 ]]),\n",
-       " array([[ 0.21094933,  0.05822867,  0.00365624, -0.02279951, -0.03756215]]),\n",
-       " array([[0.49092126, 0.44278492, 0.41278608, 0.39395225, 0.38012469]]),\n",
-       " array([[1.55126726, 1.71830543, 1.85130785, 1.95362333, 2.04228126]])]"
+       "array([[-0.14285101, -0.09080658, -0.04879248, -0.02541397, -0.0103471 ]])"
       ]
      },
      "metadata": {},
-     "execution_count": 63
+     "execution_count": 68
     }
    ],
    "source": [
-    "np.array_split(df7.values, 5)"
+    "np.array_split(df7.values, 5)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Le temps de calcul est de 0.0 secondes pour cette analyse'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 111
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start_time = time.time()\n",
+    "np.array_split(df7.values, 5)[1]\n",
+    "'Le temps de calcul est de '+str(\"%s secondes\" % (time.time() - start_time))+' pour cette analyse'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-80-87e19fe12932>, line 1)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-80-87e19fe12932>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    [dict(x=[1,5,87,4,50], y=[8,8,8,8,8,8,8])['y'][i]] for i in [0,1,2,3]\u001b[0m\n\u001b[1;37m                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[dict(x=[1,5,87,4,50], y=[8,8,8,8,8,8,8])['y'][i]] for i in [0,1,2,3]"
    ]
   },
   {
